gitops/espresso/apps/cliproxyapi/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cliproxyapi
  namespace: cliproxyapi
spec:
  endpointSelector:
    matchLabels:
      app: cliproxyapi
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8317"
              protocol: TCP
    - fromEntities:
        - host
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
            - port: "8317"
              protocol: TCP
            - port: "8085"
              protocol: TCP
            - port: "1455"
              protocol: TCP
            - port: "54545"
              protocol: TCP
            - port: "51121"
              protocol: TCP
            - port: "11451"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: hermes-agent
            k8s:app: hermes-agent
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: hindsight
            k8s:app: hindsight
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: healthlog
            k8s:app: healthlog
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: uptime-kuma
            k8s:app: uptime-kuma
      toPorts:
        - ports:
            - port: "8317"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
